[gd_scene load_steps=18 format=3 uid="uid://dl2ed4gkybggf"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_iq1au"]
[ext_resource type="Resource" uid="uid://cu2gtxlcmbb34" path="res://objects/weapons/blaster-repeater.tres" id="2_6epbw"]
[ext_resource type="Texture2D" uid="uid://8ggihh27mlrr" path="res://assets/sprites/blob_shadow.png" id="2_b0fo8"]
[ext_resource type="Resource" uid="uid://c56y8pqoyk15f" path="res://objects/weapons/blaster.tres" id="3_kr4p8"]
[ext_resource type="AudioStream" uid="uid://xnxidwkp46un" path="res://assets/sounds/land.ogg" id="4_lblce"]
[ext_resource type="SpriteFrames" uid="uid://dbv3sy5qjatnl" path="res://assets/sprites/burst_animation.tres" id="4_m6ukc"]
[ext_resource type="AudioStream" uid="uid://cydjn1ct3hps2" path="res://assets/sounds/walking.ogg" id="5_ics1s"]
[ext_resource type="AudioStream" uid="uid://bvnum0u73y8sv" path="res://assets/sounds/jump_a.ogg" id="5_sx2ws"]
[ext_resource type="AudioStream" uid="uid://5raj3p7xaecq" path="res://assets/sounds/jump_b.ogg" id="6_7xwn8"]
[ext_resource type="AudioStream" uid="uid://7tnsakv8pwa5" path="res://assets/sounds/jump_c.ogg" id="7_8js3r"]
[ext_resource type="AudioStream" uid="uid://cmc2ufr6o30gl" path="res://assets/sounds/weapon_change.ogg" id="8_0yaao"]
[ext_resource type="Shader" path="res://shaders/action_lines.gdshader" id="10_hju45"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_sbk2y"]
streams_count = 3
random_pitch = 1.0
random_volume_offset_db = 0.0
stream_0/stream = ExtResource("5_sx2ws")
stream_0/weight = 1.0
stream_1/stream = ExtResource("6_7xwn8")
stream_1/weight = 1.0
stream_2/stream = ExtResource("7_8js3r")
stream_2/weight = 1.0

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_gdq8c"]
radius = 0.3
height = 1.0

[sub_resource type="FastNoiseLite" id="FastNoiseLite_fhq3a"]
frequency = 0.2695
fractal_type = 0

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_qjc5e"]
noise = SubResource("FastNoiseLite_fhq3a")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_iytjt"]
shader = ExtResource("10_hju45")
shader_parameter/line_color = Color(1, 1, 1, 1)
shader_parameter/line_count = 1.2
shader_parameter/line_density = 0.554
shader_parameter/line_faloff = 0.792
shader_parameter/mask_size = 0.299
shader_parameter/mask_edge = 0.608
shader_parameter/animation_speed = 16.0
shader_parameter/noise = SubResource("NoiseTexture2D_qjc5e")

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
script = ExtResource("1_iq1au")
weapons = Array[Resource("res://scripts/weapon.gd")]([ExtResource("3_kr4p8"), ExtResource("2_6epbw")])
land_sfx = ExtResource("4_lblce")
jump_sfx = SubResource("AudioStreamRandomizer_sbk2y")
weapon_change_sfx = ExtResource("8_0yaao")

[node name="Collider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.55, 0)
shape = SubResource("CapsuleShape3D_gdq8c")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="Camera" type="Camera3D" parent="Head"]
cull_mask = 1048573
current = true
fov = 80.0

[node name="SubViewportContainer" type="SubViewportContainer" parent="Head/Camera"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="Head/Camera/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
msaa_3d = 1
size = Vector2i(1280, 720)
render_target_update_mode = 4

[node name="CameraItem" type="Camera3D" parent="Head/Camera/SubViewportContainer/SubViewport"]
cull_mask = 1047554
fov = 40.0

[node name="Container" type="Node3D" parent="Head/Camera/SubViewportContainer/SubViewport/CameraItem"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.2, -1, -2.25)

[node name="Muzzle" type="AnimatedSprite3D" parent="Head/Camera/SubViewportContainer/SubViewport/CameraItem"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, -0.75, -6)
layers = 2
sprite_frames = ExtResource("4_m6ukc")
frame = 2

[node name="RayCast" type="RayCast3D" parent="Head/Camera"]
exclude_parent = false
target_position = Vector3(0, 0, -10)
collide_with_areas = true

[node name="SpeedIndication" type="ColorRect" parent="Head/Camera"]
visible = false
material = SubResource("ShaderMaterial_iytjt")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Shadow" type="Decal" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.9, 0)
size = Vector3(1, 2, 1)
texture_albedo = ExtResource("2_b0fo8")
modulate = Color(1, 1, 1, 0.705882)
normal_fade = 0.5

[node name="SoundFootsteps" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_ics1s")
volume_db = -5.0
autoplay = true

[node name="Cooldown" type="Timer" parent="."]
one_shot = true
